# dungeon-crawler

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml  settings.json
.github/workflows/: rust.yml
assets/maps/catacombs/: config.json
assets/models/: assets.glb  catacombs_map.glb  character.glb  decor.glb
assets/shaders/: asset.wgsl  deferred.wgsl  joystick.wgsl  mipmap.wgsl  model-pbr.wgsl  model-shadow.wgsl  model.wgsl  model_shadow.wgsl  particle.wgsl  scaling.wgsl  shadow.wgsl  ssao.wgsl  ui-element-textured.wgsl  ui-element.wgsl  ui.wgsl
assets/tiles/: edit.json
assets/tiles/catacombs/: 1000.json  1010.json  1100.json  tile-catacombs-1000.json  tile-catacombs-1110.json  tile-catacombs-1111.json
crates/dungeon-crawler/: Cargo.toml
crates/dungeon-crawler-android/: Cargo.toml
crates/dungeon-crawler-android/src/: lib.rs
crates/dungeon-crawler/src/: config.rs  lib.rs  main.rs  state.rs  ui.rs
crates/dungeon-crawler/src/map/: decor.rs  generator.rs  mod.rs
crates/dungeon-crawler/src/ui/: input.rs  input.rs.orig  mod.rs  style.rs  transition.rs
crates/dungeon-crawler/src/ui/views/: dead.rs  game.rs  main_menu.rs  mod.rs  settings.rs  splash.rs
crates/dungeon-crawler/src/utils/: mod.rs  wakelock.rs
crates/dungeon-crawler/src/views/: game.rs  in_game.rs  main_menu.rs  mod.rs  settings.rs  splash.rs  style.rs  transition.rs
crates/dungeon-crawler/src/world/: mod.rs
crates/dungeon-crawler/src/world/components/: action.rs  attack.rs  collision.rs  display_target.rs  mod.rs  movement.rs  target.rs  tile.rs  user_control.rs  weapon.rs
crates/dungeon-crawler/src/world/components/stats/: health.rs  mod.rs
crates/dungeon-crawler/src/world/resources/: fps.rs  input.rs  mod.rs  mouse.rs
crates/dungeon-crawler/src/world/resources/input/: joystick.rs  mod.rs  mouse.rs
crates/dungeon-crawler/src/world/systems/: actions.rs  aggression.rs  collision.rs  damage.rs  display.rs  flicker.rs  health.rs  mod.rs  movement.rs  tile.rs  user_control.rs
crates/engine/: Cargo.toml  Cargo.toml.orig
crates/engine/src/: audio.rs  bounding_box.rs  bounding_sphere.rs  config.rs  frustum.rs  interpolated_value.rs  lib.rs  settings.rs  texture.rs  transform.rs  viewport.rs
crates/engine/src/collision/: circle_polygon.rs  mod.rs  polygon.rs  polygon_polygon.rs
crates/engine/src/ecs/: mod.rs
crates/engine/src/ecs/components/: animation.rs  audio.rs  light.rs  mod.rs  model.rs  model.rs.orig  render.rs  shadow.rs  sound_effects.rs  text.rs  transform.rs
crates/engine/src/ecs/resources/: audio.rs  camera.rs  mod.rs  player.rs  sound_ambience.rs  sound_effects.rs  time.rs
crates/engine/src/ecs/resources/input/: joystick.rs  mod.rs  mouse.rs
crates/engine/src/ecs/systems/: animation.rs  animation.rs.orig  audio.rs  mod.rs
crates/engine/src/file/: assets.rs  assets.rs.orig  io.rs  io.rs.orig  mod.rs  mod.rs.orig
crates/engine/src/model/: animation.rs  animation.rs.orig  emitter.rs  interpolation.rs  light.rs  material.rs  mesh.rs  mod.rs  primitive.rs  skin.rs
crates/engine/src/pipelines/: mod.rs
crates/engine/src/pipelines/builders/: pipeline_builder.rs  primitive_builder.rs  render_bundle_builder.rs  render_target_builder.rs
crates/engine/src/pipelines/glyph/: mod.rs
crates/engine/src/pipelines/image/: context.rs  mod.rs  uniforms.rs
crates/engine/src/pipelines/joystick/: mod.rs
crates/engine/src/pipelines/mipmap/: mod.rs
crates/engine/src/pipelines/model/: initializer.rs  mod.rs  model.rs  pipeline_default.rs  pipeline_display.rs  pipeline_pbr.rs  pipeline_shadow.rs  uniforms.rs
crates/engine/src/pipelines/particle/: mod.rs
crates/engine/src/pipelines/scaling/: mod.rs  uniforms.rs
crates/engine/src/pipelines/shadow/: mod.rs  uniforms.rs
crates/engine/src/pipelines/ui_element/: context.rs  mod.rs  uniforms.rs
crates/engine/src/utils/: mod.rs  vibrate.rs
crates/map/: Cargo.toml
crates/map/src/: lib.rs  pathfinding.rs  tile.rs
crates/map/src/map/: config.rs  grid.rs  mod.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  state.rs  state.rs.orig  transitions.rs
crates/ui/src/components/: bar.rs  button.rs  checkbox.rs  mod.rs  scroll.rs  slider.rs
crates/ui/src/widgets/: asset.rs  base.rs  display.rs  mod.rs  node.rs  panel.rs  render.rs  scroll.rs  stack.rs  text.rs
dungeon-crawler/: Cargo.toml
dungeon-crawler/src/: lib.rs  main.rs  state.rs  ui.rs
dungeon-crawler/src/map/: generator.rs
dungeon-crawler/src/world/: mod.rs
engine/: Cargo.toml
engine/src/: bounding_sphere.rs  interpolated_value.rs  lib.rs  settings.rs
engine/src/ecs/components/: mod.rs  particle.rs
engine/src/ecs/systems/: camera.rs
engine/src/file/: file.rs
engine/src/model/: node.rs  skin.rs  transform.rs
engine/src/pipelines/: mod.rs
engine/src/pipelines/builders/: mod.rs  render_bundle_builder.rs  render_target_builder.rs
engine/src/pipelines/glyph/: mod.rs
engine/src/pipelines/joystick/: mod.rs
engine/src/pipelines/model/: mod.rs  uniforms.rs
engine/src/pipelines/particle/: uniforms.rs
gui/: Cargo.toml
gui/src/: lib.rs
gui/src/components/: base.rs  mod.rs  node.rs  text.rs
gui/src/widgets/: base.rs  mod.rs  node.rs  text.rs
models/: box.glb  ship.glb
res/drawable-v24/: ic_launcher_foreground.xml
res/mipmap-anydpi-v26/: ic_launcher.xml
res/values/: colors.xml  themes.xml
src/: camera.rs  config.rs  lib.rs  main.rs  shader.wgsl  state.rs  viewport.rs
src/engine/: bounding_box.rs  collision.rs  frustum.rs  mod.rs  settings.rs  texture.rs  viewport.rs
src/engine/collision/: mod.rs  polygon.rs
src/engine/model/: animation.rs  emitter.rs  interpolation.rs  light.rs  material.rs  mesh.rs  mod.rs  node.rs  placeholder.rs  primitive.rs  skin.rs  vertex.rs
src/engine/pipelines/: mod.rs  pipeline_builder.rs  (+1 more)
src/map/: block.rs  decor.rs  mod.rs  room.rs  tile.rs
src/model/: mod.rs  shader.wgsl  vertex.rs
src/ui/: app.rs  egui_winit_platform.rs  mod.rs  repaint_signal.rs  theme.rs  transition.rs  utils.rs
src/utils/: display.rs  fbm.rs  interpolated_value.rs  mod.rs  wakelock.rs
src/world/: mod.rs
(+114 files in other folders)
