[package]
name = "dungeon-crawler"
authors = ["Lars Jarlvik <lars.jarlvik@gmail.com>"]
version = "0.1.0"
edition = "2018"
resolver = "2"

[profile.release]
incremental = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
winit = "0.25"
wgpu = "0.11.0"
wgpu_glyph = "0.15.1"
env_logger = "0.9"
pollster = "0.2"
cgmath = "0.18.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
specs = { version = "0.17.0", features = [ "parallel" ]}
rand = "0.8.4"
gltf = { version = "0.16.0", features = [ "extras", "KHR_lights_punctual" ]}
serde_json = "1.0.68"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.18.0"
log = "0.4.14"
ndk = "0.3"
ndk-glue = { version = "0.3", features = ["logger"] }
android_logger = "0.10.1"

[package.metadata.android]
resources = "res"
assets = "assets"

[package.metadata.android.application]
label = "Dungeon Crawler"
icon = "@mipmap/ic_launcher"
theme = "@style/Theme.Default"
colorMode = "wideColorGamut"

[package.metadata.android.application.activity]
label = "Dungeon Crawler"
orientation = "landscape"

[package.metadata.android.sdk]
min_sdk_version = 17
target_sdk_version = 29
