[package]
name = "dungeon-crawler"
authors = ["Lars Jarlvik <lars.jarlvik@gmail.com>"]
version = "0.1.0"
edition = "2018"
resolver = "2"

[profile.release]
incremental = true

[lib]
name = "dclib"
crate-type = ["lib", "cdylib"]

[dependencies]
winit = "0.26.1"
wgpu = "0.12.0"
wgpu_glyph = "0.16.0"
env_logger = "0.9"
pollster = "0.2"
cgmath = "0.18.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
specs = { version = "0.17.0", features = [ "parallel" ]}
rand = "0.8.4"
gltf = { version = "1.0.0", features = [ "extras", "KHR_lights_punctual" ]}
serde = "1.0"
serde_derive = "1.0"
serde_json = { features = ["raw_value"], version = "1.0" }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"
log = "0.4.14"
ndk = "0.5.0"
ndk-glue = { version = "0.5.0", features = ["logger"] }
android_logger = "0.10.1"

[package.metadata.android]
resources = "res"
assets = "assets"

[package.metadata.android.application]
label = "Dungeon Crawler"
icon = "@mipmap/ic_launcher"
theme = "@style/Theme.Default"
colorMode = "wideColorGamut"

[package.metadata.android.application.activity]
label = "Dungeon Crawler"
orientation = "landscape"

[package.metadata.android.sdk]
min_sdk_version = 17
target_sdk_version = 29
