[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
wgpu = "0.12.0"
wgpu_glyph = "0.16.0"
env_logger = "0.9"
pollster = "0.2"
cgmath = "0.18.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
gltf = { version = "1.0.0", features = [ "extras", "KHR_lights_punctual" ]}
serde = "1.0"
serde_derive = "1.0"
serde_json = { features = ["raw_value"], version = "1.0" }
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
rayon = "1.5.1"
smaa = "0.6.0"
bevy_ecs = "0.6.1"
bevy_transform = "0.6.0"
bevy_tasks = "0.6.0"
rand = "0.8.4"

[dependencies.uuid]
version = "1.1.2"
features = ["v4", "fast-rng"]

[profile.release]
incremental = true

