[package]
name = "dungeon-crawler-android"
authors = ["Lars Jarlvik <lars.jarlvik@gmail.com>"]
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
name = "dungeon_crawler_android"
crate-type = ["cdylib"]

[dependencies]
dungeon-crawler = { path = "../dungeon-crawler" }

[package.metadata.android]
resources = "../../res"
assets = "../../assets"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.application]
label = "Dungeon Crawler"
icon = "@mipmap/ic_launcher"
theme = "@style/Theme.Default"
colorMode = "wideColorGamut"

[package.metadata.android.application.activity]
label = "Dungeon Crawler"
orientation = "landscape"

[[package.metadata.android.uses_permission]]
name = "android.permission.VIBRATE"

[package.metadata.android.sdk]
min_sdk_version = 17
target_sdk_version = 33
