[package]
name = "dungeon-crawler"
authors = ["Lars Jarlvik <lars.jarlvik@gmail.com>"]
version = "0.1.0"
edition = "2018"
resolver = "2"

[lib]
name = "dungeon_crawler"
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
winit = "0.26.1"
bevy_ecs = "0.8.0"
bevy_hierarchy = "0.8.0"
bevy_tasks = "0.8.0"
engine = { path = "../engine" }
env_logger = "0.9"
pollster = "0.2"
rand = "0.8.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = { features = ["raw_value"], version = "1.0" }
ui = { path = "../ui" }
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"
log = "0.4.14"
ndk = "0.5.0"
ndk-glue = { version = "0.5.0", features = ["logger"] }
android_logger = "0.10.1"

[package.metadata.android]
resources = "../../res"
assets = "../../assets"

[package.metadata.android.application]
label = "Dungeon Crawler"
icon = "@mipmap/ic_launcher"
theme = "@style/Theme.Default"
colorMode = "wideColorGamut"

[package.metadata.android.application.activity]
label = "Dungeon Crawler"
orientation = "landscape"

[package.metadata.android.sdk]
min_sdk_version = 17
target_sdk_version = 29
