[package]
name = "engine"
authors = ["Lars Jarlvik <lars.jarlvik@gmail.com>"]
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.14.0"
wgpu_glyph = "0.18.0"
cgmath = "0.18.0"
bytemuck = { version = "1.4", features = ["derive"] }
gltf = { version = "1.0.0", features = ["extras", "KHR_lights_punctual"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = { features = ["raw_value"], version = "1.0" }
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
rayon = "1.5.1"
smaa = "0.8.0"
bevy_ecs = "0.9.0"
bevy_transform = "0.9.0"
bevy_tasks = "0.9.0"
rand = "0.8.4"
raw-window-handle = "0.5.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
rodio = { git = "https://github.com/RustAudio/rodio", rev = "268ddda", default-features = false, features = ["vorbis"] }
fxhash = "0.2.1"
winit = "0.27.2"

[target.'cfg(target_os = "android")'.dependencies]
oboe = { version = "0.4", features = ["java-interface", "shared-stdcxx"] }
ndk-glue = { version = "0.7.0", features = ["logger"] }
ndk-context = "0.1.1"
jni = "0.19.0"
