[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
engine = { path = "../engine" }
image = { version = "0.24", default-features = false, features = ["png"] }
taffy = { git = "https://github.com/DioxusLabs/taffy" }
