[package]
name = "ui"
authors = ["Lars Jarlvik <lars.jarlvik@gmail.com>"]
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
engine = { path = "../engine" }
image = { version = "0.24", default-features = false, features = ["png"] }
taffy = "0.2"
fxhash = "0.2.1"
